<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="64dp"
    android:background="@color/login_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/prof_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="26dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_arrow_left"
            android:layout_margin="8dp"
            android:padding="8dp"/>

        <ImageView
            android:id="@+id/iv_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/iv_settings"
            app:layout_constraintEnd_toStartOf="@id/iv_settings"
            app:layout_constraintBottom_toBottomOf="@id/iv_settings"
            android:src="@drawable/ic_share"
           android:layout_marginEnd="16dp"
            android:padding="8dp"/>

        <ImageView
            android:id="@+id/iv_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_setting"
            android:layout_margin="8dp"
            android:padding="8dp"/>


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_my_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/developer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_arrow" />


        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/my_id"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/iv_my_photo"
            app:layout_constraintTop_toTopOf="@id/iv_my_photo"/>

          <TextView
              android:id="@+id/tv_gender"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toBottomOf="@id/tv_name"
              app:layout_constraintStart_toStartOf="@id/tv_name"
              android:text="@string/id_description"/>

        <ImageView
            android:id="@+id/iv_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_profile_small"
            app:layout_constraintTop_toBottomOf="@id/iv_my_photo"
            app:layout_constraintStart_toStartOf="@id/iv_my_photo"
            android:layout_marginTop="24dp"/>


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="1 follower"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_person"
            app:layout_constraintStart_toEndOf="@+id/iv_person"
            app:layout_constraintTop_toTopOf="@+id/iv_person" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="· 3 following"
            android:layout_marginStart="4dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="36dp"
        android:paddingBottom="16dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/iv_project"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prof_info_layout"
        tools:ignore="NotSibling">


        <ImageView
            android:id="@+id/iv_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="8dp"
            android:src="@drawable/ic_yellow_star"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik"
            android:text="Popular"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/iv_star"
            app:layout_constraintStart_toEndOf="@+id/iv_star"
            app:layout_constraintTop_toTopOf="@+id/iv_star" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            tools:itemCount="10"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_star" />


        <View
            android:id="@+id/bottom_bar"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_radius64"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_view" />


        <ImageView
            android:id="@+id/iv_repositories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/background_black"
            android:padding="8dp"
            android:src="@drawable/ic_repo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bottom_bar"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tv_repositories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/repositories_txt"
            android:textColor="@color/black"
            android:fontFamily="@font/rubik"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_repositories"
            app:layout_constraintStart_toEndOf="@id/iv_repositories"
            app:layout_constraintTop_toTopOf="@id/iv_repositories" />


        <ImageView
            android:id="@+id/iv_organization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_orange"
            android:padding="8dp"
            android:src="@drawable/ic_organization"
            app:layout_constraintStart_toStartOf="@id/iv_repositories"
            app:layout_constraintTop_toBottomOf="@id/tv_repositories"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tv_organization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/organizations_txt"
            android:textColor="@color/black"
            android:fontFamily="@font/rubik"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_organization"
            app:layout_constraintStart_toEndOf="@id/iv_organization"
            app:layout_constraintTop_toTopOf="@id/iv_organization" />


        <ImageView
            android:id="@+id/iv_starred"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_yellow"
            android:padding="8dp"
            android:src="@drawable/ic_star"
            app:layout_constraintStart_toStartOf="@id/iv_organization"
            app:layout_constraintTop_toBottomOf="@id/iv_organization"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tv_starred"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/starred_txt"
            android:textColor="@color/black"
            android:fontFamily="@font/rubik"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_starred"
            app:layout_constraintStart_toEndOf="@id/iv_starred"
            app:layout_constraintTop_toTopOf="@id/iv_starred" />


        <ImageView
            android:id="@+id/iv_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_grey"
            android:padding="8dp"
            android:src="@drawable/ic_project"
            app:layout_constraintStart_toStartOf="@id/iv_starred"
            app:layout_constraintTop_toBottomOf="@id/iv_starred"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tv_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/projects_txt"
            android:textColor="@color/black"
            android:fontFamily="@font/rubik"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_project"
            app:layout_constraintStart_toEndOf="@id/iv_project"
            app:layout_constraintTop_toTopOf="@id/iv_project" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>